testsuite/tests/typing-layouts-unboxed-records/parsing_module_dot_unboxed_record.compilers.reference
File "parsing_module_dot_unboxed_record.ml", line 15, characters 11-12:
15 | let t = M.#{ i = 1 }
                ^
Error: Syntax error
